# Apply

./: .acrignore  .azbuildignore  .dockerignore  .editorconfig  .env.example  .env.monitoring.example  .env.production.example  .eslintrc.js  .gitignore  .npmrc  .prettierignore  .prettierrc  ACR_BUILD_INSTRUCTIONS.md  ACR_BUILD_SUMMARY.md  ALIGNMENT_ENGINE_BUILD_SUMMARY.md  ANALYTICS_COMPONENT_GUIDE.md  APPLY_AUTH_FIXES.md  AUTH_FIXES_FILE_MANIFEST.md  AZURE_PRODUCTION_SETUP.md  BACKEND_JOB_SERVICE_FIXES.md  BUILD_VERIFICATION_REPORT.md  CICD_HARDENING_SUMMARY.md  CICD_HARDENING_SUMMARY_OLD.md  CICD_IMPLEMENTATION_CHECKLIST.md  CI_CD_ARCHITECTURE.md  CI_CD_HARDENING_REPORT.md  CI_CD_HARDENING_SUMMARY.md  CI_CD_IMPLEMENTATION_CHECKLIST.md  CONTAINER_COMPLIANCE_VERIFICATION.md  CONTRIBUTING.md  DEPLOYMENT_ENVIRONMENTS.md  DEPLOYMENT_QUICK_REFERENCE.md  DISTRIBUTED_TRACING_IMPLEMENTATION.md  DOCKER_BUILD_VERIFICATION.md  DOCKER_DESKTOP_MIGRATION_SUMMARY.md  E2E_QUICK_START.md  E2E_TEST_IMPLEMENTATION_SUMMARY.md  EMAIL_VERIFICATION_EXAMPLES.md  EMAIL_VERIFICATION_IMPLEMENTATION.md  FEATURE_FLAGS_DOCUMENTATION.md  (+95 more)
services/ai-service/: .dockerignore  .env.example  AGENTS_API_ROUTES.py  AI_SERVICE_COMPLETION_REPORT.md  ALL_AGENTS_CODE.txt  CHECKLIST.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  INTERVIEW_PROBABILITY_MATCHING.md  MAIN_PY_UPDATES.txt  MATCHING_API_EXAMPLES.md  MULTI_LANGUAGE_AGENT.py  QUICK_START.md  README_MATCHING_ENGINE.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.bat  run_tests.sh  setup_agents.sh  test_ai_endpoints.py  test_ai_service.py  verify_tests.py
services/ai-service/app/: telemetry.py
services/ai-service/src/: config.py  config.py.backup  logging_config.py  main.py
services/ai-service/src/api/: __init__.py  dependencies.py  dependencies.py.backup  middleware.py  temp_fix.py
services/ai-service/src/middleware/: prometheus_middleware.py
services/ai-service/src/models/: database_models.py  feedback_learning.py  interview_probability_matcher.py  job_matcher.py  profile_parser.py  resume_optimizer.py  salary_predictor.py
services/ai-service/src/schemas/: __init__.py  probability_matching_schemas.py  (+2 more)
services/ai-service/tests/: .created_files.txt  __init__.py  conftest.py  requirements-test.txt  test_api_endpoints.py  test_cover_letter.py  test_embedding_service.py  test_integration.py  test_interview_endpoints.py  test_job_matching.py  test_llm_service.py  test_matching_service.py  test_probability_matching.py  test_resume_optimizer.py  test_resume_parser.py  test_salary_endpoints.py  test_vector_store.py
(+2765 files in other folders)
